# src/docs/swagger.json
@@ -232,12 +232,12 @@
                 "summary": "Proxmox VM 리스트 가져오기",
                 "parameters": [
                     {
-                        "description": "Proxmox Request Body",
-                        "name": "ProxmoxRequestBody",
+                        "description": "Proxmox Credentials",
+                        "name": "ProxmoxCredentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ProxmoxRequestBody"
+                            "$ref": "#/definitions/models.ProxmoxCredentials"
                         }
                     }
                 ],
